@@ -106,6 +106,7 @@ Improvements:
      - french.
     * edje entry : Support &, < and > in preedit string
     * eina: Eina_Tiler now take tile size into account.
+    * edje: reduce memory consumption of Edje program handler.
 
 Fixes:
     * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
